--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   universal_html: ^2.0.8
   http: ^0.13.5
   url_launcher: ^6.1.5
+  settings_ui: ^2.0.2
+  shared_preferences: ^2.0.15
 
   cupertino_icons: ^1.0.2
 
