--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   url_launcher: ^6.1.5
   settings_ui: ^2.0.2
   shared_preferences: ^2.0.15
+  provider: ^6.0.3
 
   cupertino_icons: ^1.0.2
 
