--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,9 @@ dependencies:
   http: ^0.13.5
   url_launcher: ^6.1.5
   settings_ui: ^2.0.2
-  shared_preferences: ^2.0.15
   provider: ^6.0.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
   cupertino_icons: ^1.0.2
 
