--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  hive_generator: ^1.1.3
+  build_runner: ^2.2.0
   flutter_lints: ^2.0.0
 
 flutter:
