--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,14 +35,14 @@ flutter:
   fonts:
     - family: Nunito
       fonts:
-        - asset: fonts/Nunito-Regular.ttf
-        - asset: fonts/Nunito-Light.ttf
+        - asset: fonts/Nunito/Nunito-Regular.ttf
+        - asset: fonts/Nunito/Nunito-Light.ttf
           weight: 300
-        - asset: fonts/Nunito-Medium.ttf
+        - asset: fonts/Nunito/Nunito-Medium.ttf
           weight: 500
-        - asset: fonts/Nunito-SemiBold.ttf
+        - asset: fonts/Nunito/Nunito-SemiBold.ttf
           weight: 600
-        - asset: fonts/Nunito-Bold.ttf
+        - asset: fonts/Nunito/Nunito-Bold.ttf
           weight: 700
-        - asset: fonts/Nunito-Italic.ttf
+        - asset: fonts/Nunito/Nunito-Italic.ttf
           style: italic
