--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,3 +46,24 @@ flutter:
           weight: 700
         - asset: fonts/Nunito/Nunito-Italic.ttf
           style: italic
+    - family: PT Sans
+      fonts:
+        - asset: fonts/PTSans/PTSans-Regular.ttf
+        - asset: fonts/PTSans/PTSans-Italic.ttf
+          style: italic
+        - asset: fonts/PTSans/PTSans-Bold.ttf
+          weight: 700
+        - asset: fonts/PTSans/PTSans-BoldItalic.ttf
+          weight: 700
+          style: italic
+    - family: Roboto Slab
+      fonts:
+        - asset: fonts/RobotoSlab/RobotoSlab-Regular.ttf
+        - asset: fonts/RobotoSlab/RobotoSlab-Light.ttf
+          weight: 300
+        - asset: fonts/RobotoSlab/RobotoSlab-Medium.ttf
+          weight: 500
+        - asset: fonts/RobotoSlab/RobotoSlab-SemiBold.ttf
+          weight: 600
+        - asset: fonts/RobotoSlab/RobotoSlab-Bold.ttf
+          weight: 700
